--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@ input[type='text']{
 
 }
 
+.features-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 40px;
+}
+
 .features-list{
     list-style: none; /*removes default bullets*/
     font-style: italic;
