--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ ul li a{
 }
 
 ul > li> a:hover{
-    color: blue;
+    color: lightblue;
 }
 
 main{
@@ -77,9 +77,6 @@ input[type='text']{
 }
 
 .features-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
     margin-top: 40px;
 }
