--- a/style.css
+++ b/style.css
@@ -82,20 +82,16 @@ input[type='text']{
 }
 
 .features-list{
-    list-style: none; /*removes default bullets*/
+    display: flex;
+    flex-direction: column;
     font-style: italic;
-    padding-left: 0;
-    margin: 20px auto;
-    display: block;
-    max-width: 500px;
-    text-align: left; /*to prevent stretching too wide*/
+    align-items: center;
+    gap: 15px; 
+    margin-top: 20px;
 }
     
 
-.features-list li{
-    margin-bottom: 10px;
-    font-size: 16px;
-}
+
     
     
 
