--- a/style.css
+++ b/style.css
@@ -89,11 +89,19 @@ input[type='text']{
     gap: 15px; 
     margin-top: 20px;
 }
-    
 
-
-    
-    
+.feature-box{
+    background-color: black;
+    color: white;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 15px 20px;
+    width: 80%;
+    max-width: 500px;
+    box-shadow: 2 4px 8px rgba(0, 0, 0, 0.1); 
+    font-size: 17px;
+    text-align: left;
+}
 
 footer{
     background-color: black;
