--- a/about.css
+++ b/about.css
@@ -1,10 +1,12 @@
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  padding: 40px;
-  background-color: #f5f5f5;
-  display: flex;
-  justify-content: center;
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin : 0;
+    height: 80vh;
+    justify-content: center;
+    padding: 40px;
+    background-color: #f5f5f5;
+    display: flex;
+    align-items: center;
 }
 
 .about-container {
