--- a/about.css
+++ b/about.css
@@ -19,14 +19,14 @@ body{
 
 .about-container h1 {
   text-align: center;
-  color: #333;
+  color: black;
   margin-bottom: 25px;
 }
 
 .about-container p {
   font-size: 16px;
-  line-height: 1.7;
-  color: #555;
+  line-height: 2.0;
+  color: black;
   margin-bottom: 20px;
 }
 
