--- a/contact.css
+++ b/contact.css
@@ -48,3 +48,14 @@
 .contact-form button:hover{
     background-color:#0c3c6c;
 }
+
+.back-button{
+    display: inline-block;
+    margin: 20px 0;
+    padding: 10px 20px;
+    color: #4b83c4;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3 ease;
+}
