--- a/contact.css
+++ b/contact.css
@@ -59,3 +59,9 @@
     font-weight: bold;
     transition: background-color 0.3 ease;
 }
+
+#formMessage {
+  margin-top: 15px;
+  text-align: center;
+  font-weight: bold;
+}
