--- a/about.css
+++ b/about.css
@@ -1,21 +1,22 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin : 0;
-    height: 80vh;
+    min-height: 100vh;
     justify-content: center;
     padding: 40px;
     background-color: #f5f5f5;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 .about-container {
   background: #fff;
   padding: 30px 40px;
-  position: fixed;
   border-radius: 10px;
   max-width: 800px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .about-container h1 {
@@ -49,6 +50,17 @@ body.dark-mode .about-container{
 
 body.dark-mode .hightlight{
     color: #90caf9;
+}
+
+.back-button{
+    margin-top: 20px;
+    background-color: #e8f0fe;
+    padding: 10px 20px;
+    color: #4b83c4;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3 ease;
 }
 
 #toggle-theme{
